// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display some warning messages for non INFO levels 1`] = `
<Modal
  contentLabel="system.set_log_level"
  onRequestClose={[Function]}
>
  <form
    id="set-log-level-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        system.set_log_level
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <p
        className="spacer-bottom"
        key="INFO"
      >
        <input
          checked={false}
          className="spacer-right text-middle"
          id="loglevel-INFO"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="INFO"
        />
        <label
          className="text-middle"
          htmlFor="loglevel-INFO"
        >
          INFO
        </label>
      </p>
      <p
        className="spacer-bottom"
        key="DEBUG"
      >
        <input
          checked={true}
          className="spacer-right text-middle"
          id="loglevel-DEBUG"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="DEBUG"
        />
        <label
          className="text-middle"
          htmlFor="loglevel-DEBUG"
        >
          DEBUG
        </label>
      </p>
      <p
        className="spacer-bottom"
        key="TRACE"
      >
        <input
          checked={false}
          className="spacer-right text-middle"
          id="loglevel-TRACE"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="TRACE"
        />
        <label
          className="text-middle"
          htmlFor="loglevel-TRACE"
        >
          TRACE
        </label>
      </p>
      <Alert
        className="spacer-top"
        variant="info"
      >
        Foo
      </Alert>
      <Alert
        className="spacer-top"
        variant="warning"
      >
        system.log_level.warning
      </Alert>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="set-log-level-submit"
      >
        save
      </SubmitButton>
      <ResetButtonLink
        id="set-log-level-cancel"
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly 1`] = `
<Modal
  contentLabel="system.set_log_level"
  onRequestClose={[Function]}
>
  <form
    id="set-log-level-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        system.set_log_level
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <p
        className="spacer-bottom"
        key="INFO"
      >
        <input
          checked={true}
          className="spacer-right text-middle"
          id="loglevel-INFO"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="INFO"
        />
        <label
          className="text-middle"
          htmlFor="loglevel-INFO"
        >
          INFO
        </label>
      </p>
      <p
        className="spacer-bottom"
        key="DEBUG"
      >
        <input
          checked={false}
          className="spacer-right text-middle"
          id="loglevel-DEBUG"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="DEBUG"
        />
        <label
          className="text-middle"
          htmlFor="loglevel-DEBUG"
        >
          DEBUG
        </label>
      </p>
      <p
        className="spacer-bottom"
        key="TRACE"
      >
        <input
          checked={false}
          className="spacer-right text-middle"
          id="loglevel-TRACE"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="TRACE"
        />
        <label
          className="text-middle"
          htmlFor="loglevel-TRACE"
        >
          TRACE
        </label>
      </p>
      <Alert
        className="spacer-top"
        variant="info"
      >
        Foo
      </Alert>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="set-log-level-submit"
      >
        save
      </SubmitButton>
      <ResetButtonLink
        id="set-log-level-cancel"
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;
